DT-1911 Navigation overlay fix on iOS mobile #3

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -75,7 +75,7 @@ html, body {
 	top: 0;
 	bottom: 0;
 	left: 0;
-	// max-height: 100vh;
+	height: 100%;
 	opacity: 1;
 	@media @mobile {
 		padding-bottom: 45px;
